# cleric

./: .gitignore  .windsurf-rules.yaml  CMakeLists.txt  LICENSE  README.md  return2.c  return2.s
include/: library.h
src/: cleric.c  driver.c  library.c  main.c
src/args/: args.c  args.h
src/codegen/: codegen.c  codegen.h
src/compiler/: compiler.c  compiler.h  driver.c  driver.h
src/driver/: driver.c  driver.h
src/files/: files.c  files.h
src/ir/: ast_to_tac.c  ast_to_tac.h  tac.c  tac.h
src/lexer/: lexer.c  lexer.h
src/memory/: arena.c  arena.h
src/parser/: ast.c  ast.h  parser.c  parser.h
src/strings/: strings.c  strings.h
src/validator/: symbol_table.c  symbol_table.h  validator.c  validator.h
tests/: test_all.c  test_arena.c  test_args.c  test_ast.c  test_ast_to_tac.c  test_cleric.c  test_codegen.c  test_compiler.c  test_driver.c  test_files.c  test_integration.c  test_lexer.c  test_library.c  test_parser.c  test_strings.c  test_tac.c
tests/codegen/: test_codegen.c  test_codegen_logical.c  test_codegen_relational_conditional.c
tests/parser/: test_parser_assignments.c  test_parser_binary_expressions.c  test_parser_blocks_declarations.c  test_parser_errors_and_literals.c  test_parser_precedence.c  test_parser_program.c  test_parser_relational_logical_expressions.c  test_parser_unary_expressions.c
tests/validator/: test_symbol_table.c  test_validator.c
